--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "react-router-dom": "^4.3.1",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-helmet": "5.2.0",
+    "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "serve": "^9.1.0"
+    "serve": "9.1.0"
   },
   "scripts": {
     "dev": "react-scripts start",
